# npc

./: .gitignore  LICENSE  test.py
mind/: .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
mind/archived/: apis_llm_client.py  mcp_prompts.py  mcp_server.py
mind/archived/simulators_code/prompts/: story_concept_template.py  story_outcomes_template.py  story_section_template.py
mind/archived/simulators_code/text_adventure/: __init__.py  story_engine.py  terminal_ui.py
mind/docs/: README.md  agent.md  apis.md  mcp-server.md  npc_mcp_design.md  simulators.md
mind/docs/cognitive_architecture/: overview.md
mind/docs/cognitive_architecture/nodes/: README.md  base.md
mind/docs/integration/: godot_mcp_integration_plan.md
mind/docs/interfaces/: mcp.md
mind/docs/meta/: style-guide.md
mind/docs/planning/: AUDIT_RECOMMENDATIONS.md  README.md  roadmap.md  testing-plan.md
mind/docs/planning/1_immediate/: INDEX.md
mind/docs/planning/2_roadmap/: INDEX.md
mind/docs/planning/3_backlog/: INDEX.md  basic_memory_system.md  behavioral_chunking.md  emotional_memory.md  potential_features.md  simulation_metadata_tool.md  sleep_as_cognitive_resource.md  social_memory.md  theory_of_mind.md  working_memory.md
mind/docs/planning/backlog/: basic_memory_system.md  basic_planning.md  cluster_based_memory_consolidation.md  compositional_language.md  emotional_modeling.md  event_memory_integration.md  generative_agents_memory.md  godot_integration.md  hierarchical_planning.md  knowledge_graphs.md  mcp_debugging.md  mcp_tools.md  memory_reflection.md  memory_types.md  personality.md  working_memory.md
mind/docs/planning/immediate/: code_organization_refactor.md  simulation-mechanics-understanding.md
mind/notebooks/: prototyping.ipynb  test_cognitive_pipeline.ipynb  test_decision_cycle.ipynb
mind/planning/immediate/: fix-entity-hallucination.md
mind/src/mind/: constants.py  logging_config.py  mcp_server.py  project_config.py
mind/src/mind/agent/: agent.py
mind/src/mind/apis/: clean_llm_client.py  langchain_llm.py  llm_client.py  messages.py  typed_llm_function.py
mind/src/mind/cognitive_architecture/: id_generator.py  models.py  pipeline.py  protocols.py  state.py
mind/src/mind/cognitive_architecture/actions/: __init__.py  exceptions.py  models.py
mind/src/mind/cognitive_architecture/memory/: __init__.py  models.py  store.py  vector_db_memory.py
mind/src/mind/cognitive_architecture/nodes/: base.py  formatting.py
mind/src/mind/cognitive_architecture/nodes/action_selection/: models.py  node.py  prompt.md
mind/src/mind/cognitive_architecture/nodes/cognitive_update/: models.py  node.py  prompt.md
mind/src/mind/cognitive_architecture/nodes/memory_consolidation/: __init__.py  node.py
mind/src/mind/cognitive_architecture/nodes/memory_query/: __init__.py  models.py  node.py  prompt.md
mind/src/mind/cognitive_architecture/observations/: __init__.py  models.py
mind/src/mind/interfaces/: __init__.py  base_interface.py  text_adventure_interface.py
mind/src/mind/interfaces/mcp/: __init__.py  main.py  mind.py  models.py  server.py
mind/src/mind/knowledge/: __init__.py  activity.md  base.py  files.py  interactions.md  movement.md  needs.md
mind/src/mind/prompts/: __init__.py  action_decision_template.py  long_term_memory_template.py  memory_queries_template.py  memory_report_template.py  prompt_common.py  working_memory_template.py
mind/src/mind/simulators/: text_adventure.py
mind/src/mind/simulators/text_adventure/: agent_gameplay.py
mind/tests/: __init__.py  test_mcp_integration.py  test_memory_deduplication.py
mind/tests/fixtures/: __init__.py  observations.py
mind/tests/integration/: __init__.py  test_cognitive_pipeline.py  test_http_endpoints.py  test_mcp_server.py  test_memory_retrieval.py
mind/tests/unit/: test_action_selection_node.py  test_base_node.py  test_cognitive_update_models.py  test_cognitive_update_node.py  test_mcp_server.py  test_memory_consolidation_node.py  test_memory_query_node.py  test_memory_retrieval_node.py  test_models.py  test_vector_db_memory.py
mind/tests/unit/actions/: __init__.py  test_action_models.py
mind/tests/unit/memory/: __init__.py  test_memory_models.py
mind/tests/unit/observations/: __init__.py  test_interaction_grounding.py  test_observation_models.py
npc/: CLAUDE.md  README.md  agent.py  agent_args.py  base_agent.py  frozen_lake.py  llm_agent.py  llm_args.py  ppo.py  prototyping.ipynb  pyproject.toml  train.py
npc/src/npc/: llm_response_generator.py  mcp.md  mcp_server.py  project_config.py  prototyping.ipynb
npc/src/npc/agent/: agent.py  memory_database.py
npc/src/npc/agent/examples/: mcp_test.py
npc/src/npc/apis/: gmail_client.py  llm_client.py
npc/src/npc/interfaces/: __init__.py  text_adventure_interface.py
npc/src/npc/prompts/: __init__.py  action_decision_template.py  common.py  long_term_memory_template.py  memory_queries_template.py  memory_report_template.py  prompt_common.py  working_memory_template.py
npc/src/npc/prompts/ai_assistant/: email_action_template.py  email_briefing_template.py  email_summary_template.py  inbox_briefing_template.py  inbox_management_template.py
npc/src/npc/prompts/text_adventure/: story_concept_template.py  story_outcomes_template.py  story_section_template.py
npc/src/npc/simulators/: text_adventure.py
npc/src/npc/simulators/ai_assistant/: assistant.py  assistant_prototyping.ipynb
npc/src/npc/simulators/text_adventure/: agent_gameplay.py  story_engine.py
plan_eval/: generate_plans.ipynb  (+1 more)
(+38 files in other folders)
