[tool.poetry]
name = "mind"
version = "0.1.0"
packages = [
    { include = "mind", from = "src" }
]
description = ""
authors = ["Taylor Hearn <hearntaylor@gmail.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
torch = { version = "^2.2.0", source = "pytorch" }
sentence-transformers = "^3.0.1"
config = "^0.5.1"
pydantic = "^2.9.0"
rich = "^13.8.1"
json-repair = "^0.29.5"
google-api-python-client = "^2.149.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
EZGmail = "^2024.8.13"
openai = "^1.12.0"
PerplexiPy = "^1.1.3"
aiofiles = "^24.1.0"
portpicker = "^1.6.0"
mcp = "^1.2.0"
fastmcp = "^0.4.1"
langgraph = "^0.2.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
chromadb = "^0.5.0"
posthog = "<3.6.0"

[tool.poetry.group.dev.dependencies]
nbstripout = "^0.8.1"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
ruff = "^0.14.1"
mypy = "^1.18.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raise without from inside except
    "B905",  # zip() without strict parameter (Python 3.10+ feature)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
